Add all SureWork ERP source code